# pilotlog

./: .env.dev  Dockerfile  Exploratory Data Analysis .ipynb  README.md  docker-compose.yml  manage.py  psycopg2-2.9-cp312-cp312-win_amd64.whl  pyproject.toml
.ipynb_checkpoints/: Exploratory Data Analysis -checkpoint.ipynb
data_handler/: admin.py  models.py  resources.py  serializers.py  urls.py  views.py  viewsets.py
files/: Exploratory Data Analysis .ipynb
pilotlog/: settings.py  urls.py
src/apps/data_handler/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  viewsets.py
src/apps/data_handler/migrations/: 0001_initial.py
src/apps/pilotlog/: asgi.py  settings.py  wsgi.py
src/apps/templates/: import_data.html
templates/: import_data.html
